--- a/Index.html
+++ b/Index.html
@@ -2,12 +2,12 @@
 <html>
 <title>HOME</title>
 <head>
-  <!---Header image. It is the with of the page: 1000px--->
+  <!--Header image. It is the with of the page: 1000px-->
   <img src = "Header_Image.png" width="1000"></img>
 </head>
 
-<!---Header links--->
-<body style="background-color:#111111;" color: black;">
+<!--Header links-->
+<body style="background-color:#111111;">
     <font face = "Maven Pro"><table width = "1000" CELLSPACING=0>
         <tr style="background-color:#ffffff;" height="30">
             <th width = "10%"><a href = "index.html"><b>HOME
@@ -31,9 +31,12 @@
                 </b></form>
             </th>
         </tr>
+
         <tr>
+                <!-- PUT YOUR CODE HERE -->
 
         </tr>
+
     </table></font>
 
 </body>
