--- a/Index.html
+++ b/Index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html style="background-color:#111111;">
 <title>HOME</title>
 <head>
   <!--Header image. It is the with of the page: 1000px-->
@@ -7,7 +7,7 @@
 </head>
 
 <!--Header links-->
-<body style="background-color:#111111;">
+<nav margin-top: 0>
     <font face = "Maven Pro"><table width = "1000" CELLSPACING=0>
         <tr style="background-color:#ffffff;" height="30">
             <th width = "10%"><a href = "index.html"><b>HOME
@@ -32,12 +32,27 @@
             </th>
         </tr>
 
-        <tr>
+      </table></font>
+
+
+      </nav>
+      <body>
+
+      <font face = "Maven Pro"><table width = "1000" CELLSPACING=0 style="background-color:#ffffff;">
+        <tr height="30">
+          <th>
+
+
+            
                 <!-- PUT YOUR CODE HERE -->
+                <p>PUT YOUR CODE HERE!</p>
 
+
+
+
+          </th>
         </tr>
+      </table></font>
 
-    </table></font>
-
-</body>
+      </body>
 </html>
