--- a/Index.html
+++ b/Index.html
@@ -55,4 +55,15 @@
       </table></font>
 
       </body>
+
+      <footer>
+
+      <table width="1000px" height="500px" style="background-color:#036ba8;">
+        <tr>
+          <th>
+          </th>
+        </tr>
+      </table>
+      </footer>
+
 </html>
