--- a/register.html
+++ b/register.html
@@ -43,7 +43,7 @@
         <tr>
           <th width="100%">
                 <!-- PUT YOUR CODE HERE -->
-                <h2>LOGIN</h2>
+                <h2>REGISTER</h2>
           </th>
         </tr>
         <form>
@@ -57,14 +57,28 @@
           <tr>
             <th>
               <br>
+              <input type = "password" name = "email" placeholder = "Email">
+            </th>
+          </tr>
+
+          <tr>
+            <th>
+              <br>
               <input type = "password" name = "pass" placeholder = "Password">
             </th>
           </tr>
 
           <tr>
             <th>
-              <input type="checkbox" id="Remember" name="Remember" value="RememberMe">
-              <label for="Remember"> Remember Me</label><br>
+              <br>
+              <input type = "password" name = "passconfirm" placeholder = "Confirm Password">
+            </th>
+          </tr>
+
+          <tr>
+            <th>
+              <input type="checkbox" id="Agree" name="Agree" value="Agree">
+              <label for="Agree"> By creating an account, youu must agree to Dunder Mifflin's <a>TERMS OF SERVICE</a></label><br>
             </th>
           <tr>
 
@@ -78,11 +92,10 @@
           <tr>
             <th>
               <br>
-              Don't have an account?<br>
-              <a href="register.html">REGISTER</a>
+              Already have an account?<br>
+              <a href="login.html">LOGIN</a>
             </th>
           </tr>
-
 
           <tr height="300px">
             <th>
