--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,7 @@
 
 <!--Header links-->
 <nav margin-top: 0>
-    <font face = "Maven Pro"><table width = "1000" CELLSPACING=0>
+    <font face = "Arial"><table width = "1000" CELLSPACING=0>
         <tr style="background-color:#ffffff;" height="30">
             <th width = "10%"><a href = "index.html"><b>HOME
             </b></a></th>
@@ -38,7 +38,7 @@
       </nav>
       <body>
 
-      <font face = "Maven Pro"><table width = "1000" CELLSPACING=0 style="background-color:#ffffff;">
+      <font face = "Arial"><table width = "1000" CELLSPACING=0 style="background-color:#ffffff;">
         <tr height="30">
           <th>
 
