--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
 
 <!--Header links-->
 <nav margin-top: 0>
-    <font face = "Maven Pro"><table width = "1000" CELLSPACING=0>
+    <font face = "Arial"><table width = "1000" CELLSPACING=0>
         <tr style="background-color:#ffffff;" height="30">
             <th width = "10%"><a href = "index.html"><b>HOME
             </b></a></th>
@@ -39,7 +39,7 @@
 
       <body>
 
-      <font face = "Maven Pro"><table width = "1000" CELLSPACING=0 style="background-color:#ffffff;">
+      <font face = "Arial"><table width = "1000" CELLSPACING=0 style="background-color:#ffffff;">
         <tr>
           <th width="100%">
                 <!-- PUT YOUR CODE HERE -->
@@ -49,7 +49,7 @@
         <form>
           <tr>
             <th>
-            <input type = "text" name = "user" placeholder = "Username">
+            <input type = "text" name = "user" placeholder = "Username" style="width: 180px; height: 30px;">
             <br>
             </th>
           </tr>
@@ -57,29 +57,29 @@
           <tr>
             <th>
               <br>
-              <input type = "password" name = "pass" placeholder = "Password">
+              <input type = "password" name = "pass" placeholder = "Password" style="width: 180px; height: 30px;">
             </th>
           </tr>
 
           <tr>
             <th>
               <input type="checkbox" id="Remember" name="Remember" value="RememberMe">
-              <label for="Remember"> Remember Me</label><br>
+              <label for="Remember"><font size="-1">Remember Me</font></label><br>
             </th>
           <tr>
 
           <tr>
             <th>
               <br>
-              <input type="submit" value="SUBMIT">
+              <input type="submit" value="SUBMIT" style="width: 155px; height: 30px; background-color:#036ba8; color:#ffffff;" >
             </th>
           </tr>
 
           <tr>
             <th>
               <br>
-              Don't have an account?<br>
-              <a href="register.html">REGISTER</a>
+              <font size="-1">Don't have an account?</font><br>
+              <a href="register.html"><font size="-1">LOGIN</font></a>
             </th>
           </tr>
 
