--- a/paymentinfo.html
+++ b/paymentinfo.html
@@ -8,7 +8,7 @@
 
 <!--Header links-->
 <nav margin-top: 0>
-    <font face = "Maven Pro"><table width = "1000" CELLSPACING=0>
+    <font face = "Arial"><table width = "1000" CELLSPACING=0>
         <tr style="background-color:#ffffff;" height="30">
             <th width = "10%"><a href = "index.html"><b>HOME
             </b></a></th>
@@ -39,67 +39,62 @@
 
       <body>
 
-      <font face = "Maven Pro"><table width = "1000" CELLSPACING=0 style="background-color:#ffffff;">
+      <font face = "Arial"><table width = "1000" CELLSPACING=0 style="background-color:#ffffff;">
         <tr>
-          <th colspan="3" width="100%">
+          <th colspan="2" width="100%">
                 <!-- PUT YOUR CODE HERE -->
                 <h2>PAYMENT INFORMATION</h2>
+                <br>
                 <h3 style="text-align: center">CARDHOLDER NAME</h3>
           </th>
         </tr>
 
         <form>
         <tr>
-          <th width = "425" style="text-align: right;">
-                <input type="text" name="fname" placeholder="First Name">
+          <th width = "500" style="text-align: right;">
+                <input type="text" name="fname" placeholder="First Name" style="width: 180px; height: 30px;">
           </th>
 
-          <th width = "50"></th>
-
-          <th width = "425" style="text-align: left;">
-            <input type="text" name="lname" placeholder="Last Name">
+          <th width = "500" style="text-align: left;">
+            <input type="text" name="lname" placeholder="Last Name" style="width: 180px; height: 30px;">
           </th>
         </tr>
 
         <tr>
-          <th colspan="3" width="100%">
+          <th colspan="2" width="100%">
             <h3 style="text-align: center">CARD NUMBER</h3>
           </th>
         </tr>
 
         <tr>
-          <th width = "425" style="text-align: right;">
-                <input type="text" name="cnum" placeholder="Card Number">
+          <th width = "500" style="text-align: right;">
+                <input type="text" name="cnum" placeholder="Card Number" style="width: 180px; height: 30px;">
           </th>
 
-          <th width = "50"></th>
-
-          <th width = "425" style="text-align: left;">
-            <input type="text" name="cvc" placeholder="CVC">
+          <th width = "500" style="text-align: left;">
+            <input type="text" name="cvc" placeholder="CVC" style="width: 180px; height: 30px;">
           </th>
         </tr>
 
         <tr>
-          <th width = "425" style="text-align: right;">
-                <input type="text" name="exdate" placeholder="Expiration Date">
+          <th width = "500" style="text-align: right;">
+                <input type="text" name="exdate" placeholder="Expiration Date" style="width: 180px; height: 30px;">
           </th>
 
-          <th width = "50"></th>
-
-          <th width = "425" style="text-align: left;">
-            <input type="text" name="zip" placeholder="Zip Code">
+          <th width = "500" style="text-align: left;">
+            <input type="text" name="zip" placeholder="Zip Code" style="width: 180px; height: 30px;">
           </th>
         </tr>
 
         <tr">
-          <th colspan="3" width="100%">
+          <th colspan="2" width="100%">
             <br>
-            <input type="submit" value="SUBMIT" style="width:300px;">
+            <input type="submit" value="SUBMIT" style="width: 300px; height: 30px; background-color:#036ba8; color:#ffffff;">
           </th>
         </tr>
 
         <tr">
-          <th colspan="3" width="100%" height=200px>
+          <th colspan="2" width="100%" height=200px>
           </th>
         </tr>
 
