--- a/register.html
+++ b/register.html
@@ -8,7 +8,7 @@
 
 <!--Header links-->
 <nav margin-top: 0>
-    <font face = "Maven Pro"><table width = "1000" CELLSPACING=0>
+    <font face = "Arial"><table width = "1000" CELLSPACING=0>
         <tr style="background-color:#ffffff;" height="30">
             <th width = "10%"><a href = "index.html"><b>HOME
             </b></a></th>
@@ -39,7 +39,7 @@
 
       <body>
 
-      <font face = "Maven Pro"><table width = "1000" CELLSPACING=0 style="background-color:#ffffff;">
+      <font face = "Arial"><table width = "1000" CELLSPACING=0 style="background-color:#ffffff;">
         <tr>
           <th width="100%">
                 <!-- PUT YOUR CODE HERE -->
@@ -49,7 +49,7 @@
         <form>
           <tr>
             <th>
-            <input type = "text" name = "user" placeholder = "Username">
+            <input type = "text" name = "user" placeholder = "Username" style="width: 180px; height: 30px;">
             <br>
             </th>
           </tr>
@@ -57,43 +57,45 @@
           <tr>
             <th>
               <br>
-              <input type = "password" name = "email" placeholder = "Email">
+              <input type = "password" name = "email" placeholder = "Email" style="width: 180px; height: 30px;">
             </th>
           </tr>
 
           <tr>
             <th>
               <br>
-              <input type = "password" name = "pass" placeholder = "Password">
+              <input type = "password" name = "pass" placeholder = "Password" style="width: 180px; height: 30px;">
             </th>
           </tr>
 
           <tr>
             <th>
               <br>
-              <input type = "password" name = "passconfirm" placeholder = "Confirm Password">
+              <input type = "password" name = "passconfirm" placeholder = "Confirm Password" style="width: 180px; height: 30px;">
             </th>
           </tr>
 
           <tr>
             <th>
               <input type="checkbox" id="Agree" name="Agree" value="Agree">
-              <label for="Agree"> By creating an account, youu must agree to Dunder Mifflin's <a>TERMS OF SERVICE</a></label><br>
+              <label for="Agree"><font size="-1"> By creating an account, you must agree to Dunder Mifflin's<br>
+                <a>TERMS OF SERVICE</a></font></label><br>
             </th>
           <tr>
 
           <tr>
             <th>
               <br>
-              <input type="submit" value="SUBMIT">
+              <input type="submit" value="REGISTER" style="width: 180px; height: 30px; background-color:#036ba8; color:#ffffff;">
             </th>
           </tr>
 
           <tr>
             <th>
-              <br>
+              <br><font size="-1">
               Already have an account?<br>
               <a href="login.html">LOGIN</a>
+            </font>
             </th>
           </tr>
 
