CSS is taken out, center change

--- a/Index.html
+++ b/Index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html style="background-color:#111111;">
+<html bgcolor ="bob">
+<center>
 <title>HOME</title>
 <head>
   <!--Header image. It is the with of the page: 1000px-->
-  <img src = "Header_Image.png" width="1000"></img>
+  <img src = "Header_Image.png" width ="1000"></img>
 </head>
 
 <!--Header links-->
 <nav margin-top: 0>
-    <font face = "Arial"><table width = "1000" CELLSPACING=0>
-        <tr style="background-color:#ffffff;" height="30">
+    <font face = "Arial"><table width = "1000" bgcolor = "#ffffff" 
+	CELLSPACING=0> <tr height ="30">
             <th width = "10%"><a href = "index.html"><b>HOME
             </b></a></th>
             <th width = "10%"><a href = "products.html"><b>PAPER
@@ -23,11 +24,11 @@
             <th width = "30%"></th>
 
 
-            <th width = "50%" style="text-align: center;">
+            <th width = "50%">
                 <form><b>
-            <img src = "2055940.png" width="15">
-            <input type = "text" name = "search" placeholder = "Search"
-            minlength = "1" height="15">
+            <img src = "2055940.png" width ="15">
+            <input type = "text" name = "search" 
+		placeholder = "Search" minlength = "1" height ="15">
                 </b></form>
             </th>
         </tr>
@@ -36,10 +37,11 @@
 
 
       </nav>
-      <body>
+      <body bgcolor = "bob">
 
-      <font face = "Arial"><table width = "1000" CELLSPACING=0 style="background-color:#ffffff;">
-        <tr height="30">
+      <font face = "Arial"><table width = "1000" CELLSPACING=0 
+		bgcolor = "#ffffff">
+        <tr height ="30">
           <th>
 
 
@@ -58,12 +60,13 @@
 
       <footer>
 
-      <table width="1000px" height="500px" style="background-color:#036ba8;">
+      <table width ="1000px" height = "750px" height ="500px" 
+	bgcolor = "#036ba8">
         <tr>
-          <th>
+          <th> <!-- BLUE SECTION CODE HERE IF NEEDED-->
           </th>
         </tr>
       </table>
       </footer>
-
+</center>
 </html>
