--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,21 @@
 <title>HOME</title>
 <head>
   <!--Header image. It is the with of the page: 1000px-->
-  <img src = "Header_Image.png" width ="1000"></img>
+  <table width = "1000">
+    <tr>
+      <td></td>	
+	<td rowspan = 2><img src = "Header_Image.png" width ="1000">
+	</img></td>
+    </tr>
+    <tr>
+	<b><td colspan = "2" valign = "top" align = "right">
+	<font size = "4"><a href = "Login.html">
+	LOG IN |</a><a href = "Cart.html"><img width = "20" 
+	height = "20" src = "263142.png"></a>
+	<!--Code for the Login section in the top left -->
+	</font></b></td>
+    </tr>
+  </table>
 </head>
 
 <!--Header links-->
@@ -34,6 +48,43 @@
         </tr>
 
       </table></font>
+
+
+      </nav>
+      <body bgcolor = "bob">
+
+      <font face = "Arial"><table width = "1000" CELLSPACING=0 
+		bgcolor = "#ffffff">
+        <tr height ="30">
+          <th>
+
+
+
+                <!-- PUT YOUR CODE HERE -->
+                <p>PUT YOUR CODE HERE!</p>
+
+
+
+
+          </th>
+        </tr>
+      </table></font>
+
+      </body>
+
+      <footer>
+
+      <table width ="1000px" height = "750px" height ="500px" 
+	bgcolor = "#036ba8">
+        <tr>
+          <th>  <!-- Code -->
+		<p>Code</p>
+          </th>
+        </tr>
+      </table>
+      </footer>
+</center>
+</html>
 
 
       </nav>
