Changed comment error

--- a/Index.html
+++ b/Index.html
@@ -15,7 +15,7 @@
 	<font size = "4"><a href = "Login.html">
 	LOG IN |</a><a href = "Cart.html"><img width = "20" 
 	height = "20" src = "263142.png"></a>
-	<!--Code for the Login section in the top left -->
+	<!--Code for the Login section in the top right -->
 	</font></b></td>
     </tr>
   </table>
