--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   <table width = "1000">
     <tr>
       <td></td>	
-	<td rowspan = 2><img src = "Header_Image.png" width ="1000">
+	<td rowspan = 2><img src = "Images/Header_Image.png" width ="1000">
 	</img></td>
     </tr>
     <tr>
 	<b><td colspan = "2" valign = "top" align = "right">
-	<font size = "4"><a href = "Login.html">
-	LOG IN |</a><a href = "Cart.html"><img width = "20" 
-	height = "20" src = "263142.png"></a>
+	<font size = "4"><a href = "login.html">
+	LOG IN |</a><a href = "cart.html"><img width = "20" 
+	height = "20" src = "Images/cart_icon.png"></a>
 	<!--Code for the Login section in the top right -->
 	</font></b></td>
     </tr>
@@ -40,7 +40,7 @@
 
             <th width = "50%">
                 <form><b>
-            <img src = "2055940.png" width ="15">
+            <img src = "Images/search_icon.png" width ="15">
             <input type = "text" name = "search" 
 		placeholder = "Search" minlength = "1" height ="15">
                 </b></form>
@@ -79,42 +79,6 @@
         <tr>
           <th>  <!-- Code -->
 		<p>Code</p>
-          </th>
-        </tr>
-      </table>
-      </footer>
-</center>
-</html>
-
-
-      </nav>
-      <body bgcolor = "bob">
-
-      <font face = "Arial"><table width = "1000" CELLSPACING=0 
-		bgcolor = "#ffffff">
-        <tr height ="30">
-          <th>
-
-
-
-                <!-- PUT YOUR CODE HERE -->
-                <p>PUT YOUR CODE HERE!</p>
-
-
-
-
-          </th>
-        </tr>
-      </table></font>
-
-      </body>
-
-      <footer>
-
-      <table width ="1000px" height = "750px" height ="500px" 
-	bgcolor = "#036ba8">
-        <tr>
-          <th> <!-- BLUE SECTION CODE HERE IF NEEDED-->
           </th>
         </tr>
       </table>
