--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <title>HOME</title>
 <head>
   <!--Header image. It is the with of the page: 1000px-->
-  <img src = "Header_Image.png" width="1000"></img>
+  <img src = "Images/Header_Image.png" width="1000"></img>
 </head>
 
 <!--Header links-->
@@ -25,7 +25,7 @@
 
             <th width = "50%" style="text-align: center;">
                 <form><b>
-            <img src = "2055940.png" width="15">
+            <img src = "Images/search_icon.png" width="15">
             <input type = "text" name = "search" placeholder = "Search"
             minlength = "1" height="15">
                 </b></form>
