--- a/login.html
+++ b/login.html
@@ -4,8 +4,21 @@
 <title>LOGIN</title>
 <head>
   <!--Header image. It is the with of the page: 1000px-->
-  <img src = "Images/Header_Image.png" width="1000"></img>
-  <img src = "Header_Image.png" width ="1000"></img>
+  <table width = "1000">
+    <tr>
+      <td></td>
+	<td rowspan = 2><img src = "Images/Header_Image.png" width ="1000">
+	</img></td>
+    </tr>
+    <tr>
+	<b><td colspan = "2" valign = "top" align = "right">
+	<font size = "4"><a href = "login.html">
+	LOG IN |</a><a href = "cart.html"><img width = "20"
+	height = "20" src = "Images/cart_icon.png"></a>
+	<!--Code for the Login section in the top right -->
+	</font></b></td>
+    </tr>
+  </table>
 </head>
 
 <!--Header links-->
@@ -27,10 +40,7 @@
 
             <th width = "50%">
                 <form><b>
-            <img src = "Images/search_icon.png" width="15">
-            <input type = "text" name = "search" placeholder = "Search"
-            minlength = "1" height="15">
-            <img src = "2055940.png" width ="15">
+            <img src = "Images/search_icon.png" width ="15">
             <input type = "text" name = "search"
 		placeholder = "Search" minlength = "1" height ="15">
                 </b></form>
@@ -49,58 +59,72 @@
           <th>
 
 
-            <font face = "Arial"><table width = "1000" CELLSPACING=0 style="background-color:#ffffff;">
-              <tr>
-                <th width="100%">
-                      <!-- PUT YOUR CODE HERE -->
-                      <h2>LOGIN</h2>
-                </th>
-              </tr>
-              <form>
-                <tr>
-                  <th>
-                  <input type = "text" name = "user" placeholder = "Username" style="width: 180px; height: 30px;">
-                  <br>
-                  </th>
-                </tr>
 
-                <tr>
-                  <th>
-                    <br>
-                    <input type = "password" name = "pass" placeholder = "Password" style="width: 180px; height: 30px;">
-                  </th>
-                </tr>
-
-                <tr>
-                  <th>
-                    <input type="checkbox" id="Remember" name="Remember" value="RememberMe">
-                    <label for="Remember"><font size="-1">Remember Me</font></label><br>
-                  </th>
-                <tr>
-
-                <tr>
-                  <th>
-                    <br>
-                    <input type="submit" value="SUBMIT" style="width: 155px; height: 30px; background-color:#036ba8; color:#ffffff;" >
-                  </th>
-                </tr>
-
-                <tr>
-                  <th>
-                    <br>
-                    <font size="-1">Don't have an account?</font><br>
-                    <a href="register.html"><font size="-1">REGISTER</font></a>
-                  </th>
-                </tr>
+                  <font face = "Arial"><table width = "1000" CELLSPACING=0
+            		bgcolor = "#ffffff">
+                    <tr height ="30">
+                      <th>
 
 
-                <tr height="300px">
-                  <th>
-                  </th>
-                </tr>
+                        <font face = "Arial"><table width = "1000" CELLSPACING=0 style="background-color:#ffffff;">
+                          <tr>
+                            <th width="100%">
+                                  <!-- PUT YOUR CODE HERE -->
+                                  <h2>LOGIN</h2>
+                            </th>
+                          </tr>
+                          <form>
+                            <tr>
+                              <th>
+                              <input type = "text" name = "user" placeholder = "Username" style="width: 180px; height: 30px;">
+                              <br>
+                              </th>
+                            </tr>
 
-              </form>
-            </table></font>
+                            <tr>
+                              <th>
+                                <br>
+                                <input type = "password" name = "pass" placeholder = "Password" style="width: 180px; height: 30px;">
+                              </th>
+                            </tr>
+
+                            <tr>
+                              <th>
+                                <input type="checkbox" id="Remember" name="Remember" value="RememberMe">
+                                <label for="Remember"><font size="-1">Remember Me</font></label><br>
+                              </th>
+                            <tr>
+
+                            <tr>
+                              <th>
+                                <br>
+                                <input type="submit" value="SUBMIT" style="width: 155px; height: 30px; background-color:#036ba8; color:#ffffff;" >
+                              </th>
+                            </tr>
+
+                            <tr>
+                              <th>
+                                <br>
+                                <font size="-1">Don't have an account?</font><br>
+                                <a href="register.html"><font size="-1">REGISTER</font></a>
+                              </th>
+                            </tr>
+
+
+                            <tr height="300px">
+                              <th>
+                              </th>
+                            </tr>
+
+                          </form>
+                        </table></font>
+
+
+
+                      </th>
+                    </tr>
+                  </table></font>
+
 
 
 
@@ -115,7 +139,7 @@
       <table width ="1000px" height = "750px" height ="500px"
 	bgcolor = "#036ba8">
         <tr>
-          <th> <!-- BLUE SECTION CODE HERE IF NEEDED-->
+          <th>  <!-- Code -->
           </th>
         </tr>
       </table>
