--- a/paymentinfo.html
+++ b/paymentinfo.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html bgcolor ="bob">
 <center>
-<title>SHIPPING AND PAYMENT INFO</title>
+<title>Payment and Shipping info</title>
 <head>
   <!--Header image. It is the with of the page: 1000px-->
-  <img src = "Header_Image.png" width ="1000"></img>
+  <table width = "1000">
+    <tr>
+      <td></td>
+	<td rowspan = 2><img src = "Images/Header_Image.png" width ="1000">
+	</img></td>
+    </tr>
+    <tr>
+	<b><td colspan = "2" valign = "top" align = "right">
+	<font size = "4"><a href = "login.html">
+	LOG IN |</a><a href = "cart.html"><img width = "20"
+	height = "20" src = "Images/cart_icon.png"></a>
+	<!--Code for the Login section in the top right -->
+	</font></b></td>
+    </tr>
+  </table>
 </head>
 
 <!--Header links-->
@@ -26,7 +40,7 @@
 
             <th width = "50%">
                 <form><b>
-            <img src = "2055940.png" width ="15">
+            <img src = "Images/search_icon.png" width ="15">
             <input type = "text" name = "search"
 		placeholder = "Search" minlength = "1" height ="15">
                 </b></form>
@@ -46,176 +60,190 @@
 
 
 
-            <font face = "Arial"><table width = "1000" CELLSPACING=0 style="background-color:#ffffff;">
-              <tr>
-                <th colspan="2" width="100%">
-                      <!-- PUT YOUR CODE HERE -->
-                      <h2>PAYMENT INFORMATION</h2>
-                      <br>
-                      <h3 style="text-align: center">CARDHOLDER NAME</h3>
+            <font face = "Arial"><table width = "1000" CELLSPACING=0
+            bgcolor = "#ffffff">
+              <tr height ="30">
+                <th>
+
+
+
+                  <font face = "Arial"><table width = "1000" CELLSPACING=0 style="background-color:#ffffff;">
+                    <tr>
+                      <th colspan="2" width="100%">
+                            <!-- PUT YOUR CODE HERE -->
+                            <h2>PAYMENT INFORMATION</h2>
+                            <br>
+                            <h3 style="text-align: center">CARDHOLDER NAME</h3>
+                      </th>
+                    </tr>
+
+                    <form>
+                    <tr>
+                      <th width = "500" style="text-align: right;">
+                            <input type="text" name="fname" placeholder="First Name" style="width: 180px; height: 30px;">
+                      </th>
+
+                      <th width = "500" style="text-align: left;">
+                        <input type="text" name="lname" placeholder="Last Name" style="width: 180px; height: 30px;">
+                      </th>
+                    </tr>
+
+                    <tr>
+                      <th colspan="2" width="100%">
+                        <h3 style="text-align: center">CARD NUMBER</h3>
+                      </th>
+                    </tr>
+
+                    <tr>
+                      <th width = "500" style="text-align: right;">
+                            <input type="text" name="cnum" placeholder="Card Number" style="width: 180px; height: 30px;">
+                      </th>
+
+                      <th width = "500" style="text-align: left;">
+                        <input type="text" name="cvc" placeholder="CVC" style="width: 180px; height: 30px;">
+                      </th>
+                    </tr>
+
+                    <tr>
+                      <th width = "500" style="text-align: right;">
+                            <input type="text" name="exdate" placeholder="Expiration Date" style="width: 180px; height: 30px;">
+                      </th>
+
+                      <th width = "500" style="text-align: left;">
+                        <input type="text" name="zip" placeholder="Zip Code" style="width: 180px; height: 30px;">
+                      </th>
+                    </tr>
+
+                    <tr">
+                      <th colspan="2" width="100%">
+                        <br>
+                        <input type="submit" value="SUBMIT" style="width: 300px; height: 30px; background-color:#036ba8; color:#ffffff;">
+                      </th>
+                    </tr>
+
+                    <tr">
+                      <th colspan="2" width="100%" height=50px>
+                      </th>
+                    </tr>
+
+                    </form>
+
+
+                    <form>
+                    <tr>
+
+                      <th colspan="2" width="100%">
+
+                        <h2 style="text-align: center">SHIPPING INFO<br><h2>
+
+                      </th>
+                    </tr>
+
+                    <tr>
+                      <th width = "500" style="text-align: right;">
+                            <input type="text" name="fname" placeholder="First Name" style="width: 180px; height: 30px;">
+                      </th>
+
+                      <th width = "500" style="text-align: left;">
+                        <input type="text" name="lname" placeholder="Last Name" style="width: 180px; height: 30px;">
+                      </th>
+                    </tr>
+
+                    <tr>
+                      <th colspan="2" width = "100%" style="text-align: center;">
+                            <input type="text" name="address" placeholder="Street Address" style="width: 370px; height: 30px;">
+                      </th>
+                    </tr>
+
+                    <tr>
+                      <th colspan="2" width = "100%" style="text-align: center;">
+                            <input type="text" name="City" placeholder="City" style="width: 255px; height: 30px;">
+                              <select name="state" id="state" style="width: 110px; height: 30px;">
+                                <option value="" disabled selected="selected">State</option>
+                                <option value="AL">Alabama</option>
+                                <option value="AK">Alaska</option>
+                                <option value="AZ">Arizona</option>
+                                <option value="AR">Arkansas</option>
+                                <option value="CA">California</option>
+                                <option value="CO">Colorado</option>
+                                <option value="CT">Connecticut</option>
+                                <option value="DE">Delaware</option>
+                                <option value="DC">District Of Columbia</option>
+                                <option value="FL">Florida</option>
+                                <option value="GA">Georgia</option>
+                                <option value="HI">Hawaii</option>
+                                <option value="ID">Idaho</option>
+                                <option value="IL">Illinois</option>
+                                <option value="IN">Indiana</option>
+                                <option value="IA">Iowa</option>
+                                <option value="KS">Kansas</option>
+                                <option value="KY">Kentucky</option>
+                                <option value="LA">Louisiana</option>
+                                <option value="ME">Maine</option>
+                                <option value="MD">Maryland</option>
+                                <option value="MA">Massachusetts</option>
+                                <option value="MI">Michigan</option>
+                                <option value="MN">Minnesota</option>
+                                <option value="MS">Mississippi</option>
+                                <option value="MO">Missouri</option>
+                                <option value="MT">Montana</option>
+                                <option value="NE">Nebraska</option>
+                                <option value="NV">Nevada</option>
+                                <option value="NH">New Hampshire</option>
+                                <option value="NJ">New Jersey</option>
+                                <option value="NM">New Mexico</option>
+                                <option value="NY">New York</option>
+                                <option value="NC">North Carolina</option>
+                                <option value="ND">North Dakota</option>
+                                <option value="OH">Ohio</option>
+                                <option value="OK">Oklahoma</option>
+                                <option value="OR">Oregon</option>
+                                <option value="PA">Pennsylvania</option>
+                                <option value="RI">Rhode Island</option>
+                                <option value="SC">South Carolina</option>
+                                <option value="SD">South Dakota</option>
+                                <option value="TN">Tennessee</option>
+                                <option value="TX">Texas</option>
+                                <option value="UT">Utah</option>
+                                <option value="VT">Vermont</option>
+                                <option value="VA">Virginia</option>
+                                <option value="WA">Washington</option>
+                                <option value="WV">West Virginia</option>
+                                <option value="WI">Wisconsin</option>
+                                <option value="WY">Wyoming</option>
+                            </select>
+                      </th>
+                    </tr>
+
+                    <tr>
+                      <th colspan="2" width = "100%" style="text-align: center;">
+                            <input type="text" name="zip" placeholder="zip" style="width: 60px; height: 30px;">
+                      </th>
+                    </tr>
+
+                    <tr>
+                      <th colspan="2" width="100%">
+                        <br>
+                        <input type="submit" value="SUBMIT" style="width: 300px; height: 30px; background-color:#036ba8; color:#ffffff;">
+                      </th>
+                    </tr>
+
+                    <tr>
+                      <th colspan="2" width="100%" height=200px>
+                      </th>
+                    </tr>
+
+                    </form>
+
+
+                  </table></font>
+
+
+
                 </th>
               </tr>
-
-              <form>
-              <tr>
-                <th width = "500" style="text-align: right;">
-                      <input type="text" name="fname" placeholder="First Name" style="width: 180px; height: 30px;">
-                </th>
-
-                <th width = "500" style="text-align: left;">
-                  <input type="text" name="lname" placeholder="Last Name" style="width: 180px; height: 30px;">
-                </th>
-              </tr>
-
-              <tr>
-                <th colspan="2" width="100%">
-                  <h3 style="text-align: center">CARD NUMBER</h3>
-                </th>
-              </tr>
-
-              <tr>
-                <th width = "500" style="text-align: right;">
-                      <input type="text" name="cnum" placeholder="Card Number" style="width: 180px; height: 30px;">
-                </th>
-
-                <th width = "500" style="text-align: left;">
-                  <input type="text" name="cvc" placeholder="CVC" style="width: 180px; height: 30px;">
-                </th>
-              </tr>
-
-              <tr>
-                <th width = "500" style="text-align: right;">
-                      <input type="text" name="exdate" placeholder="Expiration Date" style="width: 180px; height: 30px;">
-                </th>
-
-                <th width = "500" style="text-align: left;">
-                  <input type="text" name="zip" placeholder="Zip Code" style="width: 180px; height: 30px;">
-                </th>
-              </tr>
-
-              <tr">
-                <th colspan="2" width="100%">
-                  <br>
-                  <input type="submit" value="SUBMIT" style="width: 300px; height: 30px; background-color:#036ba8; color:#ffffff;">
-                </th>
-              </tr>
-
-              <tr">
-                <th colspan="2" width="100%" height=50px>
-                </th>
-              </tr>
-
-              </form>
-
-
-              <form>
-              <tr>
-
-                <th colspan="2" width="100%">
-
-                  <h2 style="text-align: center">SHIPPING INFO<br><h2>
-
-                </th>
-              </tr>
-
-              <tr>
-                <th width = "500" style="text-align: right;">
-                      <input type="text" name="fname" placeholder="First Name" style="width: 180px; height: 30px;">
-                </th>
-
-                <th width = "500" style="text-align: left;">
-                  <input type="text" name="lname" placeholder="Last Name" style="width: 180px; height: 30px;">
-                </th>
-              </tr>
-
-              <tr>
-                <th colspan="2" width = "100%" style="text-align: center;">
-                      <input type="text" name="address" placeholder="Street Address" style="width: 370px; height: 30px;">
-                </th>
-              </tr>
-
-              <tr>
-                <th colspan="2" width = "100%" style="text-align: center;">
-                      <input type="text" name="City" placeholder="City" style="width: 255px; height: 30px;">
-                        <select name="state" id="state" style="width: 110px; height: 30px;">
-                          <option value="" disabled selected="selected">State</option>
-                          <option value="AL">Alabama</option>
-                          <option value="AK">Alaska</option>
-                          <option value="AZ">Arizona</option>
-                          <option value="AR">Arkansas</option>
-                          <option value="CA">California</option>
-                          <option value="CO">Colorado</option>
-                          <option value="CT">Connecticut</option>
-                          <option value="DE">Delaware</option>
-                          <option value="DC">District Of Columbia</option>
-                          <option value="FL">Florida</option>
-                          <option value="GA">Georgia</option>
-                          <option value="HI">Hawaii</option>
-                          <option value="ID">Idaho</option>
-                          <option value="IL">Illinois</option>
-                          <option value="IN">Indiana</option>
-                          <option value="IA">Iowa</option>
-                          <option value="KS">Kansas</option>
-                          <option value="KY">Kentucky</option>
-                          <option value="LA">Louisiana</option>
-                          <option value="ME">Maine</option>
-                          <option value="MD">Maryland</option>
-                          <option value="MA">Massachusetts</option>
-                          <option value="MI">Michigan</option>
-                          <option value="MN">Minnesota</option>
-                          <option value="MS">Mississippi</option>
-                          <option value="MO">Missouri</option>
-                          <option value="MT">Montana</option>
-                          <option value="NE">Nebraska</option>
-                          <option value="NV">Nevada</option>
-                          <option value="NH">New Hampshire</option>
-                          <option value="NJ">New Jersey</option>
-                          <option value="NM">New Mexico</option>
-                          <option value="NY">New York</option>
-                          <option value="NC">North Carolina</option>
-                          <option value="ND">North Dakota</option>
-                          <option value="OH">Ohio</option>
-                          <option value="OK">Oklahoma</option>
-                          <option value="OR">Oregon</option>
-                          <option value="PA">Pennsylvania</option>
-                          <option value="RI">Rhode Island</option>
-                          <option value="SC">South Carolina</option>
-                          <option value="SD">South Dakota</option>
-                          <option value="TN">Tennessee</option>
-                          <option value="TX">Texas</option>
-                          <option value="UT">Utah</option>
-                          <option value="VT">Vermont</option>
-                          <option value="VA">Virginia</option>
-                          <option value="WA">Washington</option>
-                          <option value="WV">West Virginia</option>
-                          <option value="WI">Wisconsin</option>
-                          <option value="WY">Wyoming</option>
-                      </select>
-                </th>
-              </tr>
-
-              <tr>
-                <th colspan="2" width = "100%" style="text-align: center;">
-                      <input type="text" name="zip" placeholder="zip" style="width: 60px; height: 30px;">
-                </th>
-              </tr>
-
-              <tr>
-                <th colspan="2" width="100%">
-                  <br>
-                  <input type="submit" value="SUBMIT" style="width: 300px; height: 30px; background-color:#036ba8; color:#ffffff;">
-                </th>
-              </tr>
-
-              <tr">
-                <th colspan="2" width="100%" height=200px>
-                </th>
-              </tr>
-
-              </form>
-
-
             </table></font>
+
 
 
 
@@ -230,7 +258,7 @@
       <table width ="1000px" height = "750px" height ="500px"
 	bgcolor = "#036ba8">
         <tr>
-          <th> <!-- BLUE SECTION CODE HERE IF NEEDED-->
+          <th>  <!-- Code -->
           </th>
         </tr>
       </table>
