--- a/FAQ.html
+++ b/FAQ.html
@@ -13,8 +13,8 @@
     <tr>
 	<body link = "#00253B" alink = "#00253B" vlink = "#00253B">
 	<td colspan = "2" valign = "top" align = "right">
-	<font size = "4"><a href = "Login.html"><b>
-	LOG IN |</b></a><a href = "Cart.html"><img width = "20" 
+	<font size = "4"><a href = "login.html"><b>
+	LOG IN |</b></a><a href = "cart.html"><img width = "20" 
 	height = "20" src = "Images/cart_icon.png"></a>
 	<!--Code for the Login section in the top left -->
 	</font></body></td>
