--- a/login.html
+++ b/login.html
@@ -11,12 +11,13 @@
 	</img></td>
     </tr>
     <tr>
-	<b><td colspan = "2" valign = "top" align = "right">
+	<body link = "#00253B" alink = "#00253B" vlink = "#00253B">
+	<td colspan = "2" valign = "top" align = "right">
 	<font size = "4"><a href = "login.html">
 	LOG IN |</a><a href = "cart.html"><img width = "20"
 	height = "20" src = "Images/cart_icon.png"></a>
 	<!--Code for the Login section in the top right -->
-	</font></b></td>
+	</font></body></td>
     </tr>
   </table>
 </head>
