Products and Paper pages updated; added more description to products + changed heads of pages

--- a/login.html
+++ b/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html bgcolor ="bob">
 <center>
-<title>LOGIN</title>
+<title>Dunder Mifflin - Login</title>
 <head>
   <!--Header image. It is the with of the page: 1000px-->
   <table width = "1000">
