--- a/paperWhite.html
+++ b/paperWhite.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html bgcolor ="bob">
 <center>
-<title>HOME</title>
+<title>Dunder Mifflin - Paper</title>
 <head>
   <!--Header image. It is the with of the page: 1000px-->
   <table width = "1000">
@@ -97,24 +97,24 @@
 	  <td>
 	   <center>
 	      <fieldset>
-              <a href = "paper.html"><img width = "150" height = "150" src = "Images/PaperCASE.png"></a>
-              <br>Product Name<br>Price
+              <a href = "paperBlack.html"><img width = "150" height = "150" src = "Images/PaperCASE.png"></a>
+              <br>Copy Paper: 8.5<q>x11</q> 20lb. Black<br>$49.99
 	      </fieldset>
 	   </center>
           </td>
           <td>
            <center>
 	      <fieldset>
-              <a href = "paper.html"><img width = "150" height = "150" src = "Images/PaperCASE.png"></a>
-              <br>Product Name<br>Price
+              <a href = "paperOrange.html"><img width = "150" height = "150" src = "Images/PaperCASE.png"></a>
+              <br>Copy Paper: 8.5<q>x11</q> 20lb. Orange<br>$49.99
 	      </fieldset>
            </center>
           </td>
           <td>
             <center>
 	      <fieldset>
-              <a href = "paper.html"><img width = "150" height = "150" src = "Images/PaperCASE.png"></a>
-              <br>Product Name<br>Price
+              <a href = "paperRainbow.html"><img width = "150" height = "150" src = "Images/PaperCASE.png"></a>
+              <br>Copy Paper: 8.5<q>x11</q> 20lb. Rainbow<br>$59.99
 	      </fieldset>
             </center>
           </td>
