--- a/register.html
+++ b/register.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html bgcolor ="bob">
 <center>
-<title>REGISTER</title>
+<title>Dunder Mifflin - Register</title>
 <head>
   <!--Header image. It is the with of the page: 1000px-->
   <table width = "1000">
