--- a/FAQ.html
+++ b/FAQ.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html bgcolor ="bob">
 <center>
-<title>FAQ</title>
+<title>Dunder Mifflin - FAQ</title>
 <head>
   <!--Header image. It is the with of the page: 1000px-->
   <table width = "1000">
