--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html bgcolor ="bob">
 <center>
-<title>HOME</title>
+<title>Dunder Mifflin - Home</title>
 <head>
   <!--Header image. It is the with of the page: 1000px-->
   <table width = "1000">
