--- a/paperRed.html
+++ b/paperRed.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html bgcolor ="bob">
 <center>
-<title>HOME</title>
+<title>Dunder Mifflin - Paper</title>
 <head>
   <!--Header image. It is the with of the page: 1000px-->
   <table width = "1000">
@@ -65,23 +65,21 @@
 	    </center>
           </td>
 	  <td colspan="2">
-	    <h1>Copy Paper: 8.5<q>x11</q> 20lb. White</h1>
+	    <h1>Copy Paper: 8.5<q>x11</q> 20lb. Red</h1>
 	    <img width="25" height = "25" src = "Images/pine_tree.png">
             <img width="25" height = "25" src = "Images/pine_tree.png">
             <img width="25" height = "25" src = "Images/pine_tree.png">
             <img width="25" height = "25" src = "Images/pine_tree.png">
             <img width="25" height = "25" src = "Images/pine_tree.png"><br><br>
-	    <h3>$39.99</h3>
+	    <h3>$49.99</h3>
 	    <button>Add to Cart</button><br>
 	    <ul>
 	      <li>8.5x<q>11</q></li>
 	      <li>20lb</li>
-	      <li>92 TAPPI Brightness</li>
 	      <li>10 Reams</li>
-	      <li>White</li>
+	      <li>Red</li>
 	    </ul>
-	    
-            <p><b>DUNDER MIFFLIN COPY PAPER</b>:Dunder Mifflin White 8.5<q>x11</q> printer<br> and copying paper
+            <p><b>DUNDER MIFFLIN COPY PAPER</b>:Dunder Mifflin Red 8.5<q>x11</q> printer<br> and copying paper
 	    works as hard as you do. This dependable, everyday<br> copy paper runs great through all types of equipment.
 	    <br><b>100% Recycled Paper!</b><br><b>99.92% Jam Free-Guarantee!</b></p>
 	  </td>
@@ -97,24 +95,24 @@
 	  <td>
 	   <center>
 	      <fieldset>
-              <a href = "paper.html"><img width = "150" height = "150" src = "Images/PaperCASE.png"></a>
-              <br>Product Name<br>Price
+              <a href = "paperBlue.html"><img width = "150" height = "150" src = "Images/PaperCASE.png"></a>
+              <br>Copy Paper: 8.5<q>x11</q> 20lb. Blue<br>$49.99
 	      </fieldset>
 	   </center>
           </td>
           <td>
            <center>
 	      <fieldset>
-              <a href = "paper.html"><img width = "150" height = "150" src = "Images/PaperCASE.png"></a>
-              <br>Product Name<br>Price
+              <a href = "paperWhite.html"><img width = "150" height = "150" src = "Images/PaperCASE.png"></a>
+              <br>Copy Paper: 8.5<q>x11</q> 20lb. White<br>$39.99
 	      </fieldset>
            </center>
           </td>
           <td>
             <center>
 	      <fieldset>
-              <a href = "paper.html"><img width = "150" height = "150" src = "Images/PaperCASE.png"></a>
-              <br>Product Name<br>Price
+              <a href = "paperRainbow.html"><img width = "150" height = "150" src = "Images/PaperCASE.png"></a>
+              <br>Copy Paper: 8.5<q>x11</q> 20lb. Rainbow<br>$49.99
 	      </fieldset>
             </center>
           </td>
