--- a/paymentinfo.html
+++ b/paymentinfo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html bgcolor ="bob">
 <center>
-<title>Payment and Shipping info</title>
+<title>Dunder Mifflin - Payment and Shipping info</title>
 <head>
   <!--Header image. It is the with of the page: 1000px-->
   <table width = "1000">
