--- a/products.html
+++ b/products.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html bgcolor ="bob">
 <center>
-<title>HOME</title>
+<title>Dunder Mifflin - Products</title>
 <head>
   <!--Header image. It is the with of the page: 1000px-->
   <table width = "1000">
@@ -53,11 +53,11 @@
 
       </nav>
       <body bgcolor = "bob">
-
+      <table>
       <font face = "Arial"><table width = "1000" CELLSPACING=0
 		bgcolor = "#ffffff">
         <tr height="30">
-          <th colspan="4">
+          <th colspan="3">
                 <!-- PUT YOUR CODE HERE -->
                <center><h1>Products</h1></center>
           </th>
@@ -65,108 +65,55 @@
 	<tr>
 	  <td>
 	   <center>
-	      <a href = "paper.html"><img width = "150" height = "150" src = "Images/PaperCASE.png"></a>
-	      <br>Product Name<br>Price
+	      <fieldset>
+	      <a href = "paperWhite.html"><img width = "150" height = "150" src = "Images/PaperCASE.png"></a>
+	      <br>Copy Paper: 8.5<q>x11</q> 20lb. White<br>$39.99
+	      </fieldset>
 	   </center>
        	  </td>
 	  <td>
 	   <center>
-	      <a href = "paper.html"><img width = "150" height = "150" src = "Images/PaperCASE.png"></a>
-	      <br>Product Name<br>Price
+	      <fieldset>
+	      <a href = "paperRed.html"><img width = "150" height = "150" src = "Images/PaperCASE.png"></a>
+	      <br>Copy Paper: 8.5<q>x11</q> 20lb. Red<br>$49.99
+	      </fieldset>
 	   </center>
 	  </td>
 	  <td>
 	    <center>
-              <a href = "paper.html"><img width = "150" height = "150" src = "Images/PaperCASE.png"></a>
-              <br>Product Name<br>Price
-	    </center>
-	  </td>
-	  <td>
-	    <center>
-              <a href = "paper.html"><img width = "150" height = "150" src = "Images/PaperCASE.png"></a>
-              <br>Product Name<br>Price
+	      <fieldset>
+              <a href = "paperBlue.html"><img width = "150" height = "150" src = "Images/PaperCASE.png"></a>
+              <br>Copy Paper: 8.5<q>x11</q> 20lb. Blue<br>$49.99
+	      </fieldset>
 	    </center>
 	  </td>
 	</tr>
         <tr>
           <td>
            <center>
-              <a href = "paper.html"><img width = "150" height = "150" src = "Images/PaperCASE.png"></a>
-              <br>Product Name<br>Price
-           </center>
-          </td>
-          <td>
-           <center>
-              <a href = "paper.html"><img width = "150" height = "150" src = "Images/PaperCASE.png"></a>
-              <br>Product Name<br>Price
+	      <fieldset>
+              <a href = "paperRainbow.html"><img width = "150" height = "150" src = "Images/PaperCASE.png"></a>
+              <br>Copy Paper: 8.5<q>x11</q> 20lb. Rainbow<br>$59.99
+	      </fieldset>
            </center>
           </td>
           <td>
             <center>
-              <a href = "paper.html"><img width = "150" height = "150" src = "Images/PaperCASE.png"></a>
-              <br>Product Name<br>Price
+	      <fieldset>
+              <a href = "paperBlack.html"><img width = "150" height = "150" src = "Images/PaperCASE.png"></a>
+              <br>Copy Paper: 8.5<q>x11</q> 20lb. Black<br>$49.99
+	      </fieldset>
             </center>
           </td>
           <td>
             <center>
-              <a href = "paper.html"><img width = "150" height = "150" src = "Images/PaperCASE.png"></a>
-              <br>Product Name<br>Price
-            </center>
-          </td>
-        </tr>
-        <tr>
-          <td>
-           <center>
-              <a href = "paper.html"><img width = "150" height = "150" src = "Images/PaperCASE.png"></a>
-              <br>Product Name<br>Price
-           </center>
-          </td>
-          <td>
-           <center>
-              <a href = "paper.html"><img width = "150" height = "150" src = "Images/PaperCASE.png"></a>
-              <br>Product Name<br>Price
-           </center>
-          </td>
-          <td>
-            <center>
-              <a href = "paper.html"><img width = "150" height = "150" src = "Images/PaperCASE.png"></a>
-              <br>Product Name<br>Price
-            </center>
-          </td>
-          <td>
-            <center>
-              <a href = "paper.html"><img width = "150" height = "150" src = "Images/PaperCASE.png"></a>
-              <br>Product Name<br>Price
+	      <fieldset>
+              <a href = "paperOrange.html"><img width = "150" height = "150" src = "Images/PaperCASE.png"></a>
+              <br>Copy Paper: 8.5<q>x11</q> 20lb. Orange<br>$49.99
+	      </fieldset>
             </center>
           </td>
         </tr>
-        <tr>
-          <td>
-           <center>
-              <a href = "paper.html"><img width = "150" height = "150" src = "Images/PaperCASE.png"></a>
-              <br>Product Name<br>Price
-           </center>
-          </td>
-          <td>
-           <center>
-              <a href = "paper.html"><img width = "150" height = "150" src = "Images/PaperCASE.png"></a>
-              <br>Product Name<br>Price
-           </center>
-          </td>
-          <td>
-            <center>
-              <a href = "paper.html"><img width = "150" height = "150" src = "Images/PaperCASE.png"></a>
-              <br>Product Name<br>Price
-            </center>
-          </td>
-          <td>
-            <center>
-              <a href = "paper.html"><img width = "150" height = "150" src = "Images/PaperCASE.png"></a>
-              <br>Product Name<br>Price
-            </center>
-          </td>
-        </tr>
-
       </table></font>
 
       </body>
