--- a/products.html
+++ b/products.html
@@ -59,7 +59,7 @@
         <tr height="30">
           <th colspan="3">
                 <!-- PUT YOUR CODE HERE -->
-               <center><h1>Products</h1></center>
+               <center><h1 style="color:red;">Products</h1></center>
           </th>
         </tr>
 	<tr>
